tests/enum_from/compile_fail/container/invalid_source.rs
use enum_convert::EnumFrom;

// enum Source {
//     Unit,
// }

#[derive(EnumFrom)]
#[enum_from(Source)] // There is no Source enum
enum Target {
    Unit,
}

fn main() {}
